--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "front-end-project",
+  "name": "Game Repository",
   "version": "1.0.0",
   "private": true,
-  "description": "A dynamic HTML, CSS, and TypeScript solo project.",
+  "description": "A web application for gamers who want to access game information.",
   "main": "index.js",
   "scripts": {
     "prepare": "husky install"
